Words wyoming-ghost-towns.html

--- a/wyoming-ghost-towns.html
+++ b/wyoming-ghost-towns.html
@@ -22,8 +22,9 @@
 
     <main id="content">
       <h1>Eight ghost towns in Wyoming worth the drive</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+<p>“Isn’t all of Wyoming a ghost town?” Ha, funny. No.</p>
 
+<p>The state is still pretty new in terms of state history, but territorially, it’s got a ton of it. Especially when it comes to the frontier and settlers’ past. There are plenty of relics and historic remains left scattered across the Wildwest.</p>
 	     <img src="img/wyoming-photo.jpg" width="750" height="485" alt="Photo of Wyoming mountain range.">
 
       <section class="location-holder">
@@ -35,7 +36,7 @@
 						<a href="tel:+3072504912">(307) 250-4912</a>
 					</address>
 					<p><a href="https://www.nps.gov/bica/learn/historyculture/kane-town-history.htm">Visit National Park Service Website</a></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at felis id quam porttitor posuere. Pellentesque nec aliquet est. Nam malesuada consequat condimentum.</p>
+<p>A tiny town left underwater after the completion of the Yellowtail Dam. Knowing that a fully filled Bighorn Lake would flood Kane, the Bureau of Reclamation bought out all of the residents to encourage them to move away. Sure enough, in 1967, the lake's rising waters drowned out Kane for good.</p>
 				</div>
 			</section>
 
@@ -49,7 +50,7 @@
 						<a href="tel:+3072504912">(307) 250-4912</a>
 					</address>
 					<p><a href="https://www.blm.gov/visit/atlantic-citysouth-pass">Visit Bureau of Land Management's website</a></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at felis id quam porttitor posuere. Pellentesque nec aliquet est. Nam malesuada consequat condimentum.</p>
+<p>Now reclaimed by the state’s wildlife, the former gold mining camp used to see the constant passing through of miners and travelers in the 1800s. Some 150,000 pioneers went west between the years of 1849 and 1852.</p>
 				</div>
 			</section>
 
@@ -63,7 +64,7 @@
 						<a href="tel:+3072504912">(307) 250-4912</a>
 					</address>
 					<p><a href="https://www.blm.gov/visit/gebo-crosby-historic-mining-district">Visit Bureau of Land Management's website</a></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at felis id quam porttitor posuere. Pellentesque nec aliquet est. Nam malesuada consequat condimentum.</p>
+<p>Sharing a past of mining, the town was first established in 1907 as a coal town. Over 2,000 people lived in the town but when mining started to slow, the population dwindled too. The remains of the town were bulldozed in 1971, though some buildings and the cemetery remain.</p>
 				</div>
 			</section>
 
@@ -77,7 +78,7 @@
 						<a href="tel:+3072504912">(307) 250-4912</a>
 					</address>
 					<p><a href="https://www.fs.usda.gov/detail/shoshone/specialplaces/?cid=stelprdb5182989">Visit Forest Service's website</a></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at felis id quam porttitor posuere. Pellentesque nec aliquet est. Nam malesuada consequat condimentum.</p>
+<p>At its peak, approximately 200 miners and their families lived in Kirwin. The town came to life in the mid-1880s after gold and silver were discovered on Spar Mountain. However, in 1907, an avalanche from a nearby mountain destroyed several buildings and killed three people. It pushed many families to leave in the spring and led to the overall deserting of the town.</p>
 				</div>
 			</section>
 
@@ -91,7 +92,7 @@
 						<a href="tel:+3072504912">(307) 250-4912</a>
 					</address>
 					<p><a href="https://wyoshpo.wyo.gov/index.php/programs/national-register/wyoming-listings/view-full-list/761-sunrise-mine-historic-district">Visit Wyoming State Historic Preservation Office's website</a></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at felis id quam porttitor posuere. Pellentesque nec aliquet est. Nam malesuada consequat condimentum.</p>
+<p>Sunrise is unique in how it’s been preserved. The town started in the early 1900s, growing to employ over 547 in the nearby mines. When the steel market saw a decline in the 1980s, so did the town. It’s rare to see mining towns intact as this ghost town, holding its ground with multiple still-standing buildings.</p>
 				</div>
 			</section>
 
@@ -104,7 +105,7 @@
 						<a href="tel:+3072504912">(307) 250-4912</a>
 					</address>
 					<p><a href="https://wyoparks.wyo.gov/index.php/places-to-go/piedmont-charcoal-kilns">Visit Wyoming Park's website</a></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at felis id quam porttitor posuere. Pellentesque nec aliquet est. Nam malesuada consequat condimentum.</p>
+<p>Piedmont was a small, active railroad and timber town founded in 1867. It thrived for a time, even building large kilns to make charcoal for railroad ties. However, the town was later neglected when the Union Pacific line was built and bypassed the area.  Ultimately, the very reason for the town's establishment contributed to its downfall.</p>
 				</div>
 			</section>
 
@@ -117,24 +118,23 @@
 						<a href="tel:+3072504912">(307) 250-4912</a>
 					</address>
 					<p><a href="https://www.hmdb.org/m.asp?m=164530">Visit the Historical Marker Database's website</a></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at felis id quam porttitor posuere. Pellentesque nec aliquet est. Nam malesuada consequat condimentum.</p>
+<p>Eadsville is a ghost town located 12 miles south of Casper on Casper Mountain. Founded in 1891, it grew around a large spring after news of gold, silver, lead, and copper deposits spread. Lots were sold, and about a dozen cabins were built, with three foundations still standing today. The town was abandoned by 1905-1906, though asbestos and feldspar were mined, with feldspar still being extracted today.</p>
 				</div>
 			</section>
 
 			<section class="location-holder">
 				<div class="text-holder">
-					<h2>Bear River City</h2>
+					<h2>Arland</h2>
 					<address>
-						Bear River City, WY 82930<br>
-						41.173090, -110.870161<br>
+						Arland, WY 82433<br>
+						44.190900, -108.871400<br>
 						<a href="tel:+3072504912">(307) 250-4912</a>
 					</address>
-					<p><a href="https://www.hmdb.org/m.asp?m=225755">Visit the Historical Marker Database's website</a></p>
+					<p><a href="https://www.meeteetsewy.com/places-to-visit/arland-ghost-town-wyoming">Visit the Meeteetse Visitor Center's website</a></p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at felis id quam porttitor posuere. Pellentesque nec aliquet est. Nam malesuada consequat condimentum.</p>
 	    </div>
 			</section> 
-<iframe title="Wyoming Ghost Towns" aria-label="Locator map" id="datawrapper-chart-JMeTN" src="https://datawrapper.dwcdn.net/JMeTN/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="500" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
-
+<iframe title="Wyoming Ghost Towns" aria-label="Locator map" id="datawrapper-chart-JMeTN" src="https://datawrapper.dwcdn.net/JMeTN/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="500" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
 </script>
 
 	    <p> </p>
