--- a/wyoming-ghost-towns.html
+++ b/wyoming-ghost-towns.html
@@ -50,7 +50,7 @@
 						<a href="tel:+3072504912">(307) 250-4912</a>
 					</address>
 					<p><a href="https://www.blm.gov/visit/atlantic-citysouth-pass">Visit Bureau of Land Management's website</a></p>
-<p>Now reclaimed by the state’s wildlife, the former gold mining camp used to see the constant passing through of miners and travelers in the 1800s. Some 150,000 pioneers went west between the years of 1849 and 1852.</p>
+<p>Now reclaimed by the state’s wildlife, the former gold mining camp used to see the constant passing through of miners and travelers in the 1800s. About 150,000 pioneers went west over four years in the 1800s. When mining opportunities began to disappear, the town’s population followed.</p>
 				</div>
 			</section>
 
@@ -131,8 +131,8 @@
 						<a href="tel:+3072504912">(307) 250-4912</a>
 					</address>
 					<p><a href="https://www.meeteetsewy.com/places-to-visit/arland-ghost-town-wyoming">Visit the Meeteetse Visitor Center's website</a></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at felis id quam porttitor posuere. Pellentesque nec aliquet est. Nam malesuada consequat condimentum.</p>
-	    </div>
+<p>In terms of history, the ghost town of Arland has the darkest past. It began as a mining town in the 1800s but fell into decline less than a century later. The town's story involves a love triangle and a series of brutal murders rooted in a cycle of vengeance. Even though the graves have since been moved 32 miles away, the ghost town is infamous for causing disturbances, such as hearing voices and experiencing electrical problems in vehicles that pass by.</p>
+				</div>
 			</section> 
 <iframe title="Wyoming Ghost Towns" aria-label="Locator map" id="datawrapper-chart-JMeTN" src="https://datawrapper.dwcdn.net/JMeTN/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="500" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
 </script>
