--- a/wyoming-ghost-towns.html
+++ b/wyoming-ghost-towns.html
@@ -10,7 +10,7 @@
 </head>
 
   <body class="media-list">
-    <a class="skip-link" href="content">Skip to content</a>
+    <a class="skip-link" href="#content">Skip to content</a>
     <nav>
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
@@ -20,7 +20,7 @@
         </ul>
     </nav>
 
-    <main id="#content">
+    <main id="content">
       <h1>Eight ghost towns in Wyoming worth the drive</h1>
 
 <p>The state is still pretty new in terms of state history, but territorially, it’s got a ton of it. Especially when it comes to the frontier and settlers’ past. There are plenty of relics and historic remains left scattered across the Wildwest.</p>
