--- a/where-pigs-fly.html
+++ b/where-pigs-fly.html
@@ -10,7 +10,8 @@
 </head>
 
   <body class="media-list">
-    <a class="skip-link" href="#content">Skip to content</a>
+    <body>
+<a href="#maincontent">Skip to main content</a>
     <nav>
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
@@ -20,7 +21,7 @@
         </ul>
     </nav>
 
-    <main id="content">
+<main id="maincontent">
       <h1>Where pigs fly: Bear Creek Saloon Pig Races in Montana</h1>
       <p>In Bearcreek, Montana, the Bear Creek Saloon Pig Races are the pride and joy of the town with fewer than a hundred residents. Starting in the summer and continuing through the fall, pig races take place on Thursdays, Fridays, Saturdays, and Sundays with 12 races on a 15-minute schedule. Each pig is named and sponsored by a local company, and viewers can place their bets on the racers. The winning pig earns half of the $50 race pot, while the other half is allocated to scholarships for high school students in Carbon County.</p>
 
