Try again where-pigs-fly.html

--- a/where-pigs-fly.html
+++ b/where-pigs-fly.html
@@ -11,7 +11,7 @@
 
   <body class="media-list">
     <body>
-<a href="#maincontent">Skip to main content</a>
+
     <nav>
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
@@ -21,10 +21,12 @@
         </ul>
     </nav>
 
-<main id="maincontent">
+     <a href="#maincontent">Skip to photo gallery</a>
+
       <h1>Where pigs fly: Bear Creek Saloon Pig Races in Montana</h1>
       <p>In Bearcreek, Montana, the Bear Creek Saloon Pig Races are the pride and joy of the town with fewer than a hundred residents. Starting in the summer and continuing through the fall, pig races take place on Thursdays, Fridays, Saturdays, and Sundays with 12 races on a 15-minute schedule. Each pig is named and sponsored by a local company, and viewers can place their bets on the racers. The winning pig earns half of the $50 race pot, while the other half is allocated to scholarships for high school students in Carbon County.</p>
 
+     <main id="maincontent">
       <figure class="gallery-image hideThis">
       <img src="img/landwehr-pig01.jpg" alt=“Five small pink and black piglets race forward on a dirt track. Each of them sport multi-colored vests with numbers sewn to the sides. The pig wearing a red vest tries to hop above the other four while each piglet runs forward.”>
       <figcaption>
