--- a/where-pigs-fly.html
+++ b/where-pigs-fly.html
@@ -11,7 +11,7 @@
 
   <body class="media-list">
     <body>
-<a class="skip-link" href="#maincontent">Skip to main content</a>
+<a class="main-content-link" href="#maincontent">Skip to main content</a>
 
     <nav>
         <ul>
