--- a/where-pigs-fly.html
+++ b/where-pigs-fly.html
@@ -35,7 +35,7 @@
     <figure class="gallery-image hideThis">
       <img src="img/landwehr-pig02.jpg" alt=“Seven race attendees look down on the race tracks from a wooden balcony outside of the saloon. Below them, a pig wrangler waits for a race to begin behind white wire fences.”>
       <figcaption>
-       Bets are placed inside the restaurant, and the audience can view the races from the balcony overlooking the track. The announcer sits off to the left of the crowd.
+       Bets are placed inside the restaurant, and the audience can view the races from the balcony overlooking the track.
       </figcaption>
     </figure>
 
