--- a/wyoming-ghost-towns.html
+++ b/wyoming-ghost-towns.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Kalam:wght@300;400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 
-  <body class="media-list">
-    <a class="skip-link" href="#content">Skip to content</a>
+<body>
+<a class="main-content-link" href="#maincontent">Skip to main content</a>
     <nav>
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
@@ -20,7 +20,7 @@
         </ul>
     </nav>
 
-    <main id="content">
+    <main id="maincontent">
       <h1>Eight ghost towns in Wyoming worth the drive</h1>
 
 <p>The state is still pretty new in terms of state history, but territorially, it’s got a ton of it. Especially when it comes to the frontier and settlers’ past. There are plenty of relics and historic remains left scattered across the Wildwest.</p>
