--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Kalam:wght@300;400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
+  
   <body>
-
-    <a class="skip-link" href="#content">Skip to content</a>
+<a class="main-content-link" href="#maincontent">Skip to main content</a>
 
    <nav>
         <ul>
@@ -21,7 +21,7 @@
         </ul>
     </nav>
 
-    <main id="content">
+    <main id="maincontent">
 
      <h1>Abigail Landwehr's Site</h1>
     
