--- a/stargate-ranked.html
+++ b/stargate-ranked.html
@@ -9,8 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Kalam:wght@300;400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 
+    <body>
+<a class="main-content-link" href="#maincontent">Skip to main content</a>
 <body class="media-list">
-    <a class="skip-link" href="#content">Skip to content</a>
     <nav>
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
@@ -20,7 +21,7 @@
         </ul>
     </nav>
 
-    <main id="content">
+    <main id="maincontent">
         <h1>Stargate SG-1 seasons, in order from worst to best</h1>
         <p>If you’re wondering what is Stargate, don’t worry. It’s everyone's favorite 90s sci-fi franchise they’ve probably never heard of. Or maybe their dads have. Mine missed my first-grade parent-teacher conference to watch the show and protest it coming to an end.</p>
 
