Crabrangoonphoto index.html

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
      <img src="img/abigail-portrait3.jpg" width="750" height="490" alt="Photo of Abigail outside of a restaurant in Wyoming.">
   </a>
 
-<h3>List of her top five crab rangoon spots:</h3>
+<h3>Her top five crab rangoon spots in no particular order:</h3>
 
+       <img src="img/rangoons.png" width="900" height="150" alt="Photo collage of five pictures of crab rangoons and people with Thai food and crab rangoons at a restaurant.">
 <ul>
     <li><a href="https://thaithaicody.com/">Thai Thai</a></li>
     <li><a href="https://shuang3.wixsite.com/okiimama/menu">Okii Mama</a></li>
@@ -43,6 +44,7 @@
     <li><a href="https://www.thaiplacekc.com/">Thai Place</a></li>
     <li><a href="https://littlethaisushi.com/">Little Thai & Sushi</a></li> 
 </ul>
+      <p>(A very professional <a href="https://www.instagram.com/yeahbabycrabrangoons/">crab rangoon enthusiast.</a>)</p>
 
 <footer>Abigail Landwehr, 2024</footer>
 
