--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <h3>Her top five crab rangoon spots in no particular order:</h3>
 
-       <img src="img/rangoons.png" width="860" height="150" alt="Photo collage of five pictures of crab rangoons and people with Thai food and crab rangoons at a restaurant.">
+       <img src="img/rangoons.png" width="860" height="200" alt="Photo collage of five pictures of crab rangoons and people with Thai food and crab rangoons at a restaurant.">
 <ul>
     <li><a href="https://thaithaicody.com/">Thai Thai</a></li>
     <li><a href="https://shuang3.wixsite.com/okiimama/menu">Okii Mama</a></li>
@@ -44,7 +44,7 @@
     <li><a href="https://www.thaiplacekc.com/">Thai Place</a></li>
     <li><a href="https://littlethaisushi.com/">Little Thai & Sushi</a></li> 
 </ul>
-      <p>(A very professional <a href="https://www.instagram.com/yeahbabycrabrangoons/">crab rangoon enthusiast.</a>)</p>
+      <h4>(A very professional <a href="https://www.instagram.com/yeahbabycrabrangoons/">crab rangoon enthusiast.</a>)</h4>
 
 <footer>Abigail Landwehr, 2024</footer>
 
