--- a/wyoming-ghost-towns.html
+++ b/wyoming-ghost-towns.html
@@ -24,7 +24,10 @@
       <h1>Eight ghost towns in Wyoming worth the drive</h1>
 
 <p>The state is still pretty new in terms of state history, but territorially, it’s got a ton of it. Especially when it comes to the frontier and settlers’ past. There are plenty of relics and historic remains left scattered across the Wildwest.</p>
-	     <img src="img/wyoming-photo.jpg" width="750" height="485" alt="Photo of Wyoming mountain range.">
+	     
+	    <a href="tusky.html">
+    <img src="img/wyoming-photo.jpg" width="750" height="485" alt="Photo of Wyoming mountain range.">
+  </a>
 
       <section class="location-holder">
 				<div class="text-holder">
