--- a/tusky.html
+++ b/tusky.html
@@ -25,7 +25,12 @@
     
 <p>You just got Tusky-ed.</p> 
 
-     <img src="Tusky.gif" width="750" height="490" alt="A red heart locket opens up to reveal a small black cat.">
+    <iframe width="315" height="560"
+src="https://youtube.com/shorts/lJVz8TdfaJI?feature=share"
+title="YouTube video player"
+frameborder="0"
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+allowfullscreen></iframe>
 
 <footer>Abigail Landwehr, 2024</footer>
 
