--- a/tusky.html
+++ b/tusky.html
@@ -15,9 +15,6 @@
    <nav>
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
-            <li><a class="active" href="stargate-ranked.html">Stargate SG-1</a></li>
-            <li><a class="active" href="wyoming-ghost-towns.html">Wyoming Ghost Towns</a></li>
-            <li><a class="active" href="where-pigs-fly.html">Pig Races</a></li>
         </ul>
     </nav>
 
@@ -25,11 +22,12 @@
     
 <p>You just got Tusky-ed.</p> 
 
-    <iframe width="315" height="560"
-src="https://youtube.com/shorts/lJVz8TdfaJI?feature=share"
-title="YouTube video player"
-frameborder="0"
-allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    <iframe width="315" height="560" 
+src="https://www.youtube.com/shorts/lJVz8TdfaJI" 
+title="YouTube video player" frameborder="0" 
+allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+gyroscope; picture-in-picture;
+web-share"
 allowfullscreen></iframe>
 
 <footer>Abigail Landwehr, 2024</footer>
