--- a/tusky.html
+++ b/tusky.html
@@ -22,13 +22,9 @@
     
 <p>You just got Tusky-ed.</p> 
 
-    <iframe width="315" height="560" 
-src="https://www.youtube.com/shorts/lJVz8TdfaJI" 
-title="YouTube video player" frameborder="0" 
-allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-gyroscope; picture-in-picture;
-web-share"
-allowfullscreen></iframe>
+    <video width=”320” height=”320” controls loop=” “ muted = “ “ autoplay=” “>
+<source src=”https://github.com/FALL2024-4502-7502/abigail-landwehr-website/raw/refs/heads/main/img/tusky.mov>
+</video>
 
 <footer>Abigail Landwehr, 2024</footer>
 
