--- a/tusky.html
+++ b/tusky.html
@@ -22,9 +22,7 @@
     
 <p>You just got Tusky-ed.</p> 
 
-    <video width=”320” height=”320” controls loop=” “ muted = “ “ autoplay=” “>
-<source src=”https://github.com/FALL2024-4502-7502/abigail-landwehr-website/raw/refs/heads/main/img/tusky.mov>
-</video>
+    <img src="img/tusky.png" width="750" height="490" alt="15 images in a collage of a cute black kitten doing different activities.">
 
 <footer>Abigail Landwehr, 2024</footer>
 
