--- a/tusky.html
+++ b/tusky.html
@@ -10,20 +10,13 @@
 </head>
   
   <body>
-<a class="main-content-link" href="#maincontent">Skip to main content</a>
-
-   <nav>
-        <ul>
-            <li><a class="active" href="index.html">Home</a></li>
-        </ul>
-    </nav>
-
-    <main id="maincontent">
     
 <p>You just got Tusky-ed.</p> 
 
-    <img src="img/tusky.png" width="750" height="490" alt="15 images in a collage of a cute black kitten doing different activities.">
+    <img src="img/tusky.png" width="800" height="540" alt="15 images in a collage of a black kitten doing different activities.">
 
+<p><a href="index.html">Go back home</a> or <a href="https://www.youtube.com/shorts/lJVz8TdfaJI">see more Tusky</a>?</p> 
+      
 <footer>Abigail Landwehr, 2024</footer>
 
 </main>
