--- a/tusky.html
+++ b/tusky.html
@@ -2,18 +2,27 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-    <title>Tusky</title>
+    <title>Abigail Landwehr's Site</title>
     <link rel="stylesheet" href="my-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Kalam:wght@300;400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
-  
-  <body>
+  
+  <body>
+
+   <nav>
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a class="active" href="stargate-ranked.html">Stargate SG-1</a></li>
+            <li><a class="active" href="wyoming-ghost-towns.html">Wyoming Ghost Towns</a></li>
+            <li><a class="active" href="where-pigs-fly.html">Pig Races</a></li>
+        </ul>
+    </nav>
     
 <p>You just got Tusky-ed.</p> 
 
-    <img src="img/tusky.png" width="800" height="540" alt="15 images in a collage of a black kitten doing different activities.">
+    <img src="img/tusky.png" width="850" height="590" alt="15 images in a collage of a black kitten doing different activities.">
 
 <p><a href="index.html">Go back home</a> or <a href="https://www.youtube.com/shorts/lJVz8TdfaJI">see more Tusky</a>?</p> 
       
