--- a/tusky.html
+++ b/tusky.html
@@ -10,6 +10,7 @@
 </head>
   
   <body>
+<a class="main-content-link" href="#maincontent">Skip to main content</a>
 
    <nav>
         <ul>
@@ -19,8 +20,10 @@
             <li><a class="active" href="where-pigs-fly.html">Pig Races</a></li>
         </ul>
     </nav>
+
+    <main id="maincontent">
     
-<p>You just got Tusky-ed.</p> 
+<h1>You just got Tusky-ed.</h1> 
 
     <img src="img/tusky.png" width="850" height="590" alt="15 images in a collage of a black kitten doing different activities.">
 
